# whimsy

./: .gitignore  Cargo.toml
data/: addresses.data
src/: addresses.rs  convert.rs  lib.rs  main.rs  parcels.rs  run.rs  run_ui.rs  table.rs  utils.rs
src/controls/: actions.rs  binding.rs  key_bindings.rs  mod.rs  mouse_bindings.rs
src/state/: egui_state.rs  eponym.rs  gpu.rs  mod.rs
