[package]
name = "whimsy"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "whimsy"

[dependencies]
bincode = "1.3.3"
csv = "1.3.0"
egui = "0.27.2"
egui-wgpu = "0.27.2"
egui-winit = "0.27.2"
egui_dock = { version = "0.12.0", features = ["serde"] }
galileo = { git = "https://github.com/Maximkaaa/galileo" }
galileo-types = { git = "https://github.com/Maximkaaa/galileo" }
geo = "0.28.0"
geo-types = "0.7.13"
geojson = "0.24.1"
geozero = "0.12.0"
indicatif = { version = "0.17.8", features = ["rayon"] }
num-traits = "0.2.18"
polite = { path = "../cordial/polite", default-features = false, features = ["bin", "gis", "win"] }
rayon = "1.10.0"
serde = { version = "1.0.197", features = ["derive"] }
spreadsheet = { git = "https://github.com/grantspassoregon/spreadsheet" }
shapefile = "0.6.0"
tokio = { version = "1.36.0", features = ["tokio-macros", "full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
wgpu = "0.19.3"
winit = "0.29.15"
itertools = "0.12.1"
egui_extras = { version = "0.27.2", features = ["file", "chrono", "datepicker", "image"] }
